--- a/Lab1/Lab1_b.ipynb
+++ b/Lab1/Lab1_b.ipynb
@@ -137,6 +137,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2eeeba6",
+   "metadata": {},
+   "source": [
+    "-------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b08b144b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tup=(1,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f739a38f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'tuple' object does not support item assignment\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "  tup[0]=2\n",
+    "except Exception as e:\n",
+    "  print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2295e9f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cff2c451",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst=[1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b861ae63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  lst[0]=2\n",
+    "except Exception as e:\n",
+    "  print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a664cd1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 3]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb69593d",
+   "metadata": {},
+   "source": [
+    "--------"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "7fc18829",
@@ -216,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "85d03eb4",
    "metadata": {},
    "outputs": [
@@ -226,7 +338,7 @@
        "['soup', 'salad']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +350,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
+   "id": "82332659",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['soup', 'dog', 'salad', 'cat', 'great']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "216d3960",
    "metadata": {},
    "outputs": [],
@@ -246,7 +379,6 @@
     "def caught_speeding(speed,is_birthday):\n",
     "  if(is_birthday):\n",
     "    speed=speed-5\n",
-    "  print(speed)\n",
     "  if(speed<61):\n",
     "    return 'No Ticket'\n",
     "  elif(speed<81):\n",
@@ -257,24 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "cf199d33",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "76\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'Small Ticket'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,24 +410,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "8bb512d7",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "81\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'Big Tiket'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
